--- a/siis/src/main/resources/properties/database.properties
+++ b/siis/src/main/resources/properties/database.properties
@@ -2,9 +2,9 @@
 
 # database property
 database.driver=oracle.jdbc.OracleDriver
-database.url=jdbc:oracle:thin:@localhost:1521:xe
-database.username=home
-database.password=home
+database.url=jdbc:oracle:thin:@www.sysout.co.kr:1521:xe
+database.username=kh2f
+database.password=kh2f
 
 # dbcp property
 database.dbcp.max-total=20
