--- a/siis/src/main/webapp/WEB-INF/web.xml
+++ b/siis/src/main/webapp/WEB-INF/web.xml
@@ -35,23 +35,28 @@
 	
 <!-- 	에러 -->
 	<error-page>
+		<error-code>400</error-code>
+		<location>/error?code=500</location>	
+	</error-page>
+	
+	<error-page>
 		<error-code>403</error-code>
 		<location>/error?code=403</location>	
 	</error-page>
 	
 	<error-page>
 		<error-code>404</error-code>
-		<location>/error?code=403</location>	
+		<location>/error?code=404</location>	
 	</error-page>
 	
 	<error-page>
 		<error-code>405</error-code>
-		<location>/error?code=403</location>	
+		<location>/error?code=405</location>	
 	</error-page>
 	
 	<error-page>
 		<error-code>500</error-code>
-		<location>/error?code=403</location>	
+		<location>/error?code=500</location>	
 	</error-page>
 	
 	<!-- Creates the Spring Container shared by all Servlets and Filters -->
